# mountains-v2

./: .gitignore  LICENSE  README.md  TODO  dev.sh  download_media_from_server.sh  hello.py  prod.sh  pyproject.toml
migrations/: 0001_lowercase_usernames.sh  0002_add_map_path.sh  0003_add_kit_items.sh  0004_add_kit_requests.sh  0005_add_kit_details.sh  0006_add_stripe_transactions.sh  0007_add_ics_tokens.sh
scripts/: download_new_db.sh  download_old_db.sh  import_from_old_mountains.py  import_kit.py  resize_img.py  update_prod_from_datadump.sh
src/mountains/: app.py  auth.py  context.py  db.py  discord.py  email.py  errors.py  events.py  models.py  pages.py  payments.py  photos.py  repos.py  tokens.py  users.py  utils.py
src/mountains/albums/: __init__.py
src/mountains/auth/: __init__.py  routes.py
src/mountains/committee/: __init__.py
src/mountains/events/: __init__.py
src/mountains/ics/: __init__.py
src/mountains/kit/: __init__.py
src/mountains/members/: __init__.py
src/mountains/models/: activity.py  events.py  kit.py  membership.py  pages.py  photos.py  stripetransaction.py  tokens.py  users.py
src/mountains/platform/: __init__.py  events.py  members.py  photos.py  routes.py
src/mountains/static/: style.css
src/mountains/static/css/: committee.css  info.css  main.css  members.css
src/mountains/templates/: _forms.html.j2  base.html.j2  committee.bios.html.j2  index.html.j2  landing.html.j2  login.html.j2  page.html.j2  register.html.j2
src/mountains/templates/macros/: bi.html.j2  profile.html.j2
tests/: test_add_user.py  test_db.py
(+80 files in other folders)
