[project]
name = "mountains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.3.0",
    "cattrs>=24.1.2",
    "flask[dotenv]>=3.1.0",
    "markdown>=3.7",
    "pillow>=11.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["djlint>=1.36.3", "pytest>=8.3.4"]
