[project]
name = "mountains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.3.0",
    "cattrs>=24.1.2",
    "flask[dotenv]>=3.1.0",
    "gunicorn>=23.0.0",
    "mistune>=3.1.0",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "stripe>=11.4.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.3",
    "mountains",
    "pytest>=8.3.4",
    "pyright",
]

[tool.uv.sources]
mountains = { workspace = true }
